after finish working

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
+    "db:start": "mongod --dbpath data/db",
     "seed:locations": "ts-node src/infrastructure/database/seeds/seedLocations.ts"
   },
   "dependencies": {
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "reflect-metadata": "^0.2.2",
+    "sharp": "^0.34.5",
     "tsyringe": "^4.10.0",
     "winston": "^3.18.3"
   },
@@ -33,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.8.4",
+    "@types/nodemailer": "^7.0.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
